支持不确定用户范围的排除推送
