# work/sg/common/v1/api.pb.go
@@ -161,7 +161,9 @@ type SgMessageReq struct {
 	// 用户ID
 	UserIdList []int64 `protobuf:"varint,2,rep,packed,name=user_id_list,json=userIdList,proto3" json:"user_id_list,omitempty"`
 	// 文件的ID
-	FileId               string   `protobuf:"bytes,3,opt,name=file_id,json=fileId,proto3" json:"file_id,omitempty"`
+	FileId string `protobuf:"bytes,3,opt,name=file_id,json=fileId,proto3" json:"file_id,omitempty"`
+	// 排除的用户ID 主要用于不确定用户范围的推送
+	ExcludeUserIdList    []int64  `protobuf:"varint,4,rep,packed,name=exclude_user_id_list,json=excludeUserIdList,proto3" json:"exclude_user_id_list,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -394,54 +396,56 @@ func init() {
 func init() { proto.RegisterFile("work/sg/common/v1/api.proto", fileDescriptor_94955c5bcc4b00ce) }
 
 var fileDescriptor_94955c5bcc4b00ce = []byte{
-	// 751 bytes of a gzipped FileDescriptorProto
+	// 773 bytes of a gzipped FileDescriptorProto
 	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x7c, 0x94, 0xdf, 0x6e, 0xdb, 0x36,
-	0x14, 0xc6, 0x2b, 0x29, 0xb6, 0xe3, 0xe3, 0x34, 0x55, 0xd8, 0x60, 0x11, 0xd2, 0x2c, 0x31, 0x84,
+	0x14, 0xc6, 0x2b, 0xcb, 0x7f, 0xe2, 0xe3, 0x34, 0x55, 0xd8, 0x60, 0x31, 0xd2, 0x2c, 0x31, 0x84,
 	0x0d, 0x08, 0x02, 0xd4, 0x5a, 0xdd, 0xbb, 0x01, 0x1b, 0x26, 0xdb, 0x5c, 0x63, 0x4c, 0xfe, 0x03,
-	0xca, 0x49, 0xb1, 0xde, 0x10, 0x8a, 0xc5, 0x69, 0xc4, 0x1c, 0x49, 0x15, 0x69, 0x6f, 0x7d, 0x8d,
-	0x5d, 0xf6, 0x31, 0xf6, 0x14, 0xbd, 0xdc, 0x13, 0x04, 0x5b, 0x2e, 0x7b, 0xb9, 0x27, 0x18, 0x48,
-	0x29, 0x8e, 0x81, 0x14, 0xbd, 0x32, 0xcf, 0xef, 0x3b, 0xdf, 0xc7, 0x43, 0xd2, 0x10, 0x3c, 0xfb,
-	0x3d, 0x2b, 0x7e, 0xf3, 0x44, 0xe2, 0xcd, 0xb3, 0xeb, 0xeb, 0x2c, 0xf5, 0x56, 0x2f, 0xbc, 0x28,
-	0xe7, 0x9d, 0xbc, 0xc8, 0x64, 0x86, 0xf6, 0x94, 0xd8, 0x11, 0x49, 0xa7, 0x14, 0x3b, 0xab, 0x17,
-	0x87, 0xfb, 0x49, 0x96, 0x64, 0x5a, 0xf5, 0xd4, 0xaa, 0x6c, 0x3c, 0x3c, 0x4a, 0xb2, 0x2c, 0x59,
-	0x30, 0x65, 0xf5, 0xa2, 0x34, 0xcd, 0x64, 0x24, 0x79, 0x96, 0x8a, 0x52, 0x75, 0xdf, 0x1b, 0xb0,
-	0x13, 0x26, 0x23, 0x26, 0x44, 0x94, 0x30, 0xc2, 0xde, 0xa2, 0x09, 0x34, 0xae, 0xcb, 0xca, 0x31,
-	0xda, 0xc6, 0x69, 0xab, 0x7b, 0xd4, 0x79, 0xb0, 0x53, 0x67, 0xed, 0xe8, 0x1d, 0xfc, 0x77, 0x73,
-	0xf2, 0x74, 0x15, 0x2d, 0x78, 0x1c, 0x49, 0xf6, 0xad, 0x5b, 0xb0, 0xb7, 0x4b, 0x5e, 0xb0, 0xd8,
-	0x25, 0x77, 0x29, 0xa8, 0x0d, 0x3b, 0x4b, 0xc1, 0x0a, 0xca, 0x63, 0xba, 0xe0, 0x42, 0x3a, 0x66,
-	0xdb, 0x3a, 0xb5, 0x08, 0x28, 0x36, 0x8c, 0x03, 0x2e, 0x24, 0x3a, 0x80, 0xc6, 0x2f, 0x7c, 0xc1,
-	0x28, 0x8f, 0x1d, 0xab, 0x6d, 0x9c, 0x36, 0x49, 0x5d, 0x95, 0xc3, 0xd8, 0x7d, 0x03, 0x8f, 0x37,
-	0x66, 0x13, 0x39, 0x72, 0xa1, 0x2e, 0x64, 0x24, 0x97, 0x42, 0xcf, 0x66, 0xf5, 0xe0, 0xe3, 0xcd,
-	0x49, 0x45, 0x48, 0xf5, 0x8b, 0xbe, 0x86, 0xc6, 0x7c, 0xc1, 0x59, 0x2a, 0x85, 0x63, 0xea, 0xa6,
-	0xd6, 0xc7, 0x9b, 0x93, 0x3b, 0x44, 0xee, 0x16, 0x6e, 0x01, 0x4f, 0xfa, 0xd9, 0x32, 0x95, 0x7d,
-	0x5d, 0xeb, 0xf4, 0xef, 0xa1, 0x55, 0xaa, 0x54, 0x45, 0x39, 0x46, 0xdb, 0x3a, 0x6d, 0x75, 0xbf,
-	0xfc, 0xc4, 0xf1, 0x4b, 0x4f, 0x28, 0x23, 0x49, 0x60, 0xbe, 0x5e, 0xa3, 0x13, 0x68, 0xc9, 0x4c,
-	0x46, 0x0b, 0x3a, 0x57, 0xc1, 0x7a, 0xf7, 0x1a, 0x01, 0x8d, 0xf4, 0x56, 0x6e, 0x17, 0xe0, 0xde,
-	0x8a, 0x76, 0xc1, 0xe4, 0xb9, 0x3e, 0x48, 0x93, 0x98, 0x3c, 0x47, 0xfb, 0x50, 0xbb, 0x37, 0x36,
-	0x49, 0x59, 0xb8, 0xef, 0x4d, 0x68, 0xae, 0x2f, 0x01, 0x75, 0xc1, 0x8a, 0xaf, 0xa5, 0x36, 0xed,
-	0x76, 0xdb, 0x9f, 0x7b, 0x99, 0xd9, 0xbb, 0x9c, 0x11, 0xd5, 0x8c, 0x10, 0x6c, 0xc5, 0x91, 0x8c,
-	0xaa, 0x58, 0xbd, 0x46, 0xcf, 0xa0, 0x39, 0x2f, 0x58, 0x24, 0x19, 0x8d, 0xa4, 0xbe, 0x74, 0x8b,
-	0x6c, 0x97, 0xc0, 0x97, 0x4a, 0x64, 0x7f, 0xe4, 0xbc, 0xd0, 0xe2, 0x56, 0x29, 0x96, 0xc0, 0xd7,
-	0x8f, 0x25, 0x58, 0x1a, 0x2b, 0xa9, 0xa6, 0xa5, 0xba, 0x2a, 0x7d, 0x89, 0x7e, 0x80, 0xed, 0xbc,
-	0xe0, 0x59, 0xc1, 0xe5, 0x3b, 0xa7, 0xae, 0xe7, 0xfb, 0xea, 0x73, 0xf3, 0x4d, 0xab, 0x5e, 0xb2,
-	0x76, 0xa1, 0x6f, 0xa0, 0xc6, 0x56, 0x2c, 0x95, 0x4e, 0x43, 0xdb, 0x0f, 0x3f, 0x69, 0xc7, 0xaa,
-	0x83, 0x94, 0x8d, 0x67, 0xdf, 0x6d, 0xfc, 0x41, 0xd4, 0x81, 0xd1, 0x13, 0x68, 0x0d, 0x46, 0x33,
-	0x7a, 0x31, 0xfe, 0x69, 0x3c, 0x79, 0x3d, 0xb6, 0x1f, 0xa1, 0x16, 0x34, 0x14, 0x98, 0xf5, 0x06,
-	0xb6, 0x81, 0x76, 0x01, 0x74, 0x41, 0xf0, 0x78, 0x10, 0xda, 0xe6, 0xd9, 0x5f, 0x06, 0x34, 0xaa,
-	0x44, 0xa5, 0x85, 0x78, 0xc3, 0x88, 0x60, 0x37, 0xc4, 0xd4, 0x1f, 0x0c, 0xa8, 0x1f, 0xd2, 0xfe,
-	0x24, 0x08, 0x6c, 0xa3, 0x62, 0x03, 0x1c, 0xac, 0x99, 0x59, 0xf9, 0xfa, 0xe7, 0xaf, 0xe8, 0x14,
-	0x8f, 0x6c, 0x0b, 0x01, 0xd4, 0x43, 0x4c, 0x67, 0xe1, 0x8f, 0xf6, 0xd6, 0x5d, 0xc6, 0x74, 0xba,
-	0xee, 0xaf, 0xa9, 0x09, 0x43, 0x4c, 0xc7, 0x33, 0xda, 0x1f, 0xe1, 0xf1, 0xcc, 0xae, 0x23, 0x1b,
-	0x76, 0x4a, 0x40, 0xf0, 0xe5, 0x30, 0xc4, 0x76, 0x03, 0x1d, 0x81, 0x53, 0xb5, 0x4c, 0x82, 0x10,
-	0xd3, 0xe9, 0x45, 0x2f, 0x18, 0xf6, 0x69, 0x78, 0xee, 0x13, 0x6c, 0x6f, 0x9f, 0xfd, 0x69, 0xc0,
-	0xde, 0x83, 0x5b, 0xd4, 0xb1, 0xa3, 0xe9, 0xc6, 0xfc, 0x5f, 0x00, 0x52, 0xe0, 0x12, 0x93, 0x9f,
-	0x69, 0x30, 0x79, 0x4d, 0x2f, 0xfd, 0xe0, 0x02, 0xdb, 0x06, 0xda, 0x83, 0xc7, 0x8a, 0xdf, 0x23,
-	0x13, 0xed, 0x83, 0xad, 0xd0, 0x78, 0x42, 0x46, 0x7e, 0x50, 0x51, 0x4b, 0x0f, 0x3f, 0x9a, 0xd2,
-	0xf3, 0xe1, 0xab, 0xf3, 0x8a, 0x6d, 0xa1, 0x03, 0x78, 0xba, 0x0e, 0xdd, 0x10, 0x6a, 0x3d, 0xfc,
-	0xe1, 0xdf, 0xe3, 0x47, 0x1f, 0x6e, 0x8f, 0x8d, 0xbf, 0x6f, 0x8f, 0x8d, 0x7f, 0x6e, 0x8f, 0x8d,
-	0x37, 0x2f, 0x13, 0x2e, 0x7f, 0x5d, 0x5e, 0xa9, 0xb7, 0xf3, 0x84, 0xcc, 0x8a, 0x95, 0x17, 0x8b,
-	0xab, 0xe7, 0x82, 0x15, 0x2b, 0x56, 0x3c, 0x2f, 0x3f, 0x52, 0x0f, 0x3e, 0x6f, 0x57, 0x75, 0x2d,
-	0xbc, 0xfc, 0x3f, 0x00, 0x00, 0xff, 0xff, 0x5a, 0x05, 0x66, 0x72, 0xfa, 0x04, 0x00, 0x00,
+	0xca, 0x49, 0xb1, 0xde, 0x10, 0x8a, 0xc5, 0x69, 0xc4, 0x1c, 0x49, 0x15, 0x69, 0xaf, 0x7d, 0x8d,
+	0x5d, 0xee, 0x31, 0xf6, 0x14, 0x05, 0x76, 0xb3, 0x27, 0x08, 0xb6, 0x5c, 0xf6, 0x72, 0x4f, 0x30,
+	0x90, 0x52, 0x14, 0x0f, 0x29, 0x72, 0x65, 0x9e, 0xdf, 0x77, 0xbe, 0x8f, 0x87, 0xa4, 0x21, 0x78,
+	0xf6, 0x6b, 0x92, 0xfd, 0xe2, 0x88, 0xc8, 0x59, 0x24, 0x57, 0x57, 0x49, 0xec, 0xac, 0x5f, 0x38,
+	0x41, 0xca, 0xbb, 0x69, 0x96, 0xc8, 0x04, 0xed, 0x2a, 0xb1, 0x2b, 0xa2, 0x6e, 0x2e, 0x76, 0xd7,
+	0x2f, 0x0e, 0xf6, 0xa2, 0x24, 0x4a, 0xb4, 0xea, 0xa8, 0x55, 0xde, 0x78, 0x70, 0x18, 0x25, 0x49,
+	0xb4, 0x64, 0xca, 0xea, 0x04, 0x71, 0x9c, 0xc8, 0x40, 0xf2, 0x24, 0x16, 0xb9, 0x6a, 0xff, 0x69,
+	0xc0, 0xb6, 0x1f, 0x8d, 0x99, 0x10, 0x41, 0xc4, 0x08, 0x7b, 0x8b, 0xa6, 0xd0, 0xb8, 0xca, 0xab,
+	0xb6, 0xd1, 0x31, 0x4e, 0x5a, 0xbd, 0xc3, 0xee, 0xbd, 0x9d, 0xba, 0xa5, 0xa3, 0xbf, 0xff, 0xef,
+	0xf5, 0xf1, 0xd3, 0x75, 0xb0, 0xe4, 0x61, 0x20, 0xd9, 0xd7, 0x76, 0xc6, 0xde, 0xae, 0x78, 0xc6,
+	0x42, 0x9b, 0xdc, 0xa6, 0xa0, 0x0e, 0x6c, 0xaf, 0x04, 0xcb, 0x28, 0x0f, 0xe9, 0x92, 0x0b, 0xd9,
+	0xae, 0x74, 0xcc, 0x13, 0x93, 0x80, 0x62, 0xa3, 0xd0, 0xe3, 0x42, 0xa2, 0x7d, 0x68, 0xfc, 0xc4,
+	0x97, 0x8c, 0xf2, 0xb0, 0x6d, 0x76, 0x8c, 0x93, 0x26, 0xa9, 0xab, 0x72, 0x14, 0x22, 0x07, 0xf6,
+	0xd8, 0xbb, 0xc5, 0x72, 0x15, 0x32, 0xfa, 0xbf, 0x88, 0xaa, 0x8e, 0xd8, 0x2d, 0xb4, 0xf3, 0x32,
+	0xc9, 0x7e, 0x03, 0x8f, 0x37, 0x0e, 0x23, 0x52, 0x64, 0x43, 0x5d, 0xc8, 0x40, 0xae, 0x84, 0x3e,
+	0x8c, 0xd9, 0x87, 0x8f, 0xd7, 0xc7, 0x05, 0x21, 0xc5, 0x2f, 0xfa, 0x12, 0x1a, 0x8b, 0x25, 0x67,
+	0xb1, 0x14, 0xed, 0x8a, 0x6e, 0x6a, 0x7d, 0xbc, 0x3e, 0xbe, 0x45, 0xe4, 0x76, 0x61, 0x67, 0xf0,
+	0x64, 0x90, 0xac, 0x62, 0x39, 0xd0, 0xb5, 0x4e, 0xff, 0x16, 0x5a, 0xb9, 0x4a, 0x55, 0x54, 0xdb,
+	0xe8, 0x98, 0x27, 0xad, 0xde, 0xe7, 0x9f, 0xb8, 0xaf, 0xdc, 0xe3, 0xcb, 0x40, 0x12, 0x58, 0x94,
+	0x6b, 0x74, 0x0c, 0x2d, 0x99, 0xc8, 0x60, 0x49, 0x17, 0x2a, 0x58, 0xef, 0x5e, 0x23, 0xa0, 0x91,
+	0xde, 0xca, 0xee, 0x01, 0xdc, 0x59, 0xd1, 0x0e, 0x54, 0x78, 0xaa, 0x0f, 0xd2, 0x24, 0x15, 0x9e,
+	0xa2, 0x3d, 0xa8, 0xdd, 0x19, 0x9b, 0x24, 0x2f, 0xec, 0xdf, 0x2b, 0xd0, 0x2c, 0x2f, 0x01, 0xf5,
+	0xc0, 0x0c, 0xaf, 0xa4, 0x36, 0xed, 0xf4, 0x3a, 0x0f, 0x3d, 0xe5, 0xfc, 0x7d, 0xca, 0x88, 0x6a,
+	0x46, 0x08, 0xaa, 0x61, 0x20, 0x83, 0x22, 0x56, 0xaf, 0xd1, 0x33, 0x68, 0x2e, 0x32, 0x16, 0x48,
+	0x46, 0x03, 0xa9, 0x5f, 0xc9, 0x24, 0x5b, 0x39, 0x70, 0xa5, 0x12, 0xd9, 0xbb, 0x94, 0x67, 0x5a,
+	0xac, 0xe6, 0x62, 0x0e, 0x5c, 0xfd, 0xba, 0x82, 0xc5, 0xa1, 0x92, 0x6a, 0x5a, 0xaa, 0xab, 0xd2,
+	0x95, 0xe8, 0x3b, 0xd8, 0x4a, 0x33, 0x9e, 0x64, 0x5c, 0xbe, 0x6f, 0xd7, 0xf5, 0x7c, 0x5f, 0x3c,
+	0x34, 0xdf, 0xac, 0xe8, 0x25, 0xa5, 0x0b, 0x7d, 0x05, 0x35, 0xb6, 0x66, 0xb1, 0x6c, 0x37, 0xb4,
+	0xfd, 0xe0, 0x93, 0x76, 0xac, 0x3a, 0x48, 0xde, 0x78, 0xfa, 0xcd, 0xc6, 0x1f, 0x44, 0x1d, 0x18,
+	0x3d, 0x81, 0xd6, 0x70, 0x3c, 0xa7, 0xe7, 0x93, 0x1f, 0x26, 0xd3, 0xd7, 0x13, 0xeb, 0x11, 0x6a,
+	0x41, 0x43, 0x81, 0x79, 0x7f, 0x68, 0x19, 0x68, 0x07, 0x40, 0x17, 0x04, 0x4f, 0x86, 0xbe, 0x55,
+	0x39, 0xfd, 0xc3, 0x80, 0x46, 0x91, 0xa8, 0x34, 0x1f, 0x6f, 0x18, 0x11, 0xec, 0xf8, 0x98, 0xba,
+	0xc3, 0x21, 0x75, 0x7d, 0x3a, 0x98, 0x7a, 0x9e, 0x65, 0x14, 0x6c, 0x88, 0xbd, 0x92, 0x55, 0x0a,
+	0xdf, 0xe0, 0xec, 0x15, 0x9d, 0xe1, 0xb1, 0x65, 0x22, 0x80, 0xba, 0x8f, 0xe9, 0xdc, 0xff, 0xde,
+	0xaa, 0xde, 0x66, 0xcc, 0x66, 0x65, 0x7f, 0x4d, 0x4d, 0xe8, 0x63, 0x3a, 0x99, 0xd3, 0xc1, 0x18,
+	0x4f, 0xe6, 0x56, 0x1d, 0x59, 0xb0, 0x9d, 0x03, 0x82, 0x2f, 0x46, 0x3e, 0xb6, 0x1a, 0xe8, 0x10,
+	0xda, 0x45, 0xcb, 0xd4, 0xf3, 0x31, 0x9d, 0x9d, 0xf7, 0xbd, 0xd1, 0x80, 0xfa, 0x67, 0x2e, 0xc1,
+	0xd6, 0xd6, 0xe9, 0x6f, 0x06, 0xec, 0xde, 0xbb, 0x45, 0x1d, 0x3b, 0x9e, 0x6d, 0xcc, 0xff, 0x19,
+	0x20, 0x05, 0x2e, 0x30, 0xf9, 0x91, 0x7a, 0xd3, 0xd7, 0xf4, 0xc2, 0xf5, 0xce, 0xb1, 0x65, 0xa0,
+	0x5d, 0x78, 0xac, 0xf8, 0x1d, 0xaa, 0xa0, 0x3d, 0xb0, 0x14, 0x9a, 0x4c, 0xc9, 0xd8, 0xf5, 0x0a,
+	0x6a, 0xea, 0xe1, 0xc7, 0x33, 0x7a, 0x36, 0x7a, 0x75, 0x56, 0xb0, 0x2a, 0xda, 0x87, 0xa7, 0x65,
+	0xe8, 0x86, 0x50, 0xeb, 0xe3, 0x0f, 0xff, 0x1c, 0x3d, 0xfa, 0x70, 0x73, 0x64, 0xfc, 0x75, 0x73,
+	0x64, 0xfc, 0x7d, 0x73, 0x64, 0xbc, 0x79, 0x19, 0x71, 0xf9, 0xf3, 0xea, 0x52, 0xbd, 0x9d, 0x23,
+	0x64, 0x92, 0xad, 0x9d, 0x50, 0x5c, 0x3e, 0x17, 0x2c, 0x5b, 0xb3, 0xec, 0x79, 0xfe, 0x55, 0xbb,
+	0xf7, 0x3d, 0xbc, 0xac, 0x6b, 0xe1, 0xe5, 0x7f, 0x01, 0x00, 0x00, 0xff, 0xff, 0xd5, 0x4c, 0xb0,
+	0x24, 0x2b, 0x05, 0x00, 0x00,
 }
 
 func (m *SgMessageReq) Marshal() (dAtA []byte, err error) {
@@ -492,6 +496,24 @@ func (m *SgMessageReq) MarshalTo(dAtA []byte) (int, error) {
 		i++
 		i = encodeVarintApi(dAtA, i, uint64(len(m.FileId)))
 		i += copy(dAtA[i:], m.FileId)
+	}
+	if len(m.ExcludeUserIdList) > 0 {
+		dAtA5 := make([]byte, len(m.ExcludeUserIdList)*10)
+		var j4 int
+		for _, num1 := range m.ExcludeUserIdList {
+			num := uint64(num1)
+			for num >= 1<<7 {
+				dAtA5[j4] = uint8(uint64(num)&0x7f | 0x80)
+				num >>= 7
+				j4++
+			}
+			dAtA5[j4] = uint8(num)
+			j4++
+		}
+		dAtA[i] = 0x22
+		i++
+		i = encodeVarintApi(dAtA, i, uint64(j4))
+		i += copy(dAtA[i:], dAtA5[:j4])
 	}
 	if m.XXX_unrecognized != nil {
 		i += copy(dAtA[i:], m.XXX_unrecognized)
@@ -687,6 +709,13 @@ func (m *SgMessageReq) Size() (n int) {
 	l = len(m.FileId)
 	if l > 0 {
 		n += 1 + l + sovApi(uint64(l))
+	}
+	if len(m.ExcludeUserIdList) > 0 {
+		l = 0
+		for _, e := range m.ExcludeUserIdList {
+			l += sovApi(uint64(e))
+		}
+		n += 1 + sovApi(uint64(l)) + l
 	}
 	if m.XXX_unrecognized != nil {
 		n += len(m.XXX_unrecognized)
@@ -973,6 +1002,82 @@ func (m *SgMessageReq) Unmarshal(dAtA []byte) error {
 			}
 			m.FileId = string(dAtA[iNdEx:postIndex])
 			iNdEx = postIndex
+		case 4:
+			if wireType == 0 {
+				var v int64
+				for shift := uint(0); ; shift += 7 {
+					if shift >= 64 {
+						return ErrIntOverflowApi
+					}
+					if iNdEx >= l {
+						return io.ErrUnexpectedEOF
+					}
+					b := dAtA[iNdEx]
+					iNdEx++
+					v |= int64(b&0x7F) << shift
+					if b < 0x80 {
+						break
+					}
+				}
+				m.ExcludeUserIdList = append(m.ExcludeUserIdList, v)
+			} else if wireType == 2 {
+				var packedLen int
+				for shift := uint(0); ; shift += 7 {
+					if shift >= 64 {
+						return ErrIntOverflowApi
+					}
+					if iNdEx >= l {
+						return io.ErrUnexpectedEOF
+					}
+					b := dAtA[iNdEx]
+					iNdEx++
+					packedLen |= int(b&0x7F) << shift
+					if b < 0x80 {
+						break
+					}
+				}
+				if packedLen < 0 {
+					return ErrInvalidLengthApi
+				}
+				postIndex := iNdEx + packedLen
+				if postIndex < 0 {
+					return ErrInvalidLengthApi
+				}
+				if postIndex > l {
+					return io.ErrUnexpectedEOF
+				}
+				var elementCount int
+				var count int
+				for _, integer := range dAtA[iNdEx:postIndex] {
+					if integer < 128 {
+						count++
+					}
+				}
+				elementCount = count
+				if elementCount != 0 && len(m.ExcludeUserIdList) == 0 {
+					m.ExcludeUserIdList = make([]int64, 0, elementCount)
+				}
+				for iNdEx < postIndex {
+					var v int64
+					for shift := uint(0); ; shift += 7 {
+						if shift >= 64 {
+							return ErrIntOverflowApi
+						}
+						if iNdEx >= l {
+							return io.ErrUnexpectedEOF
+						}
+						b := dAtA[iNdEx]
+						iNdEx++
+						v |= int64(b&0x7F) << shift
+						if b < 0x80 {
+							break
+						}
+					}
+					m.ExcludeUserIdList = append(m.ExcludeUserIdList, v)
+				}
+			} else {
+				return fmt.Errorf("proto: wrong wireType = %d for field ExcludeUserIdList", wireType)
+			}
 		default:
 			iNdEx = preIndex
 			skippy, err := skipApi(dAtA[iNdEx:])
